syntax = "proto3";

package Redpoint.OpenGE.Protocol;

message LocalTaskDescriptor {
	string path = 1;
	repeated string arguments = 2;
	map<string, string> environmentVariables = 3;
	string workingDirectory = 4;
}

message InputFilesByPathOrContent {
	repeated string absolutePaths = 1;
	map<string, string> absolutePathsToVirtualContent = 2;
}

message InputFilesByBlobXxHash64 {
	map<string, int64> absolutePathsToBlobs = 2;
}

message RemoteTaskDescriptor {
	oneof tool {
		int64 toolXxHash64 = 1;
		string toolLocalAbsolutePath = 2;
	}
	repeated string arguments = 3;
	map<string, string> environmentVariables = 4;
	string workingDirectory = 5;
	oneof inputs {
		InputFilesByPathOrContent inputsByPathOrContent = 6;
		InputFilesByBlobXxHash64 inputsByBlobXxHash64 = 7;
	}
	repeated string outputAbsolutePaths = 8;
}

message CopyTaskDescriptor {
	string fromAbsolutePath = 1;
	string toAbsolutePath = 2;
}

message TaskDescriptor {
	oneof descriptor {
		LocalTaskDescriptor local = 1;
		RemoteTaskDescriptor remote = 2;
		CopyTaskDescriptor copy = 3;
	}
}